--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,9 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Finlandica:ital@1&family=Poppins:wght@500&family=The+Nautigal:wght@700&display=swap');
 
-/* Common */
+/*----
+Common 
+-----*/
 body {
     font-family: 'Poppins', sans-serif;
     background-repeat: no-repeat;
@@ -212,8 +214,8 @@ hr {
 /*------------------------------------
 ----------------index end---------- */
 
-/*----------------------------------------------
-----------------upcoming-match start---------- */
+/*------------------------------------
+----------upcoming-match start----- */
 
 .fixture-container {
     height: 500px;
@@ -260,5 +262,35 @@ hr {
     color: #4D4D4D;
 }
 
-/*----------------------------------------------
-----------------upcoming-match end---------- */
+/*-------------------------------------
+----------upcoming-match end-------- */
+
+/*------------------------
+-------- animation------ */
+
+.watch-live {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both infinite;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%,
+    90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    20%,
+    80% {
+      transform: translate3d(2px, 0, 0);
+    }
+    30%,
+    50%,
+    70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+    40%,
+    60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
