--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,9 +6,7 @@ Common
 -----*/
 body {
     font-family: 'Poppins', sans-serif;
-    background-repeat: no-repeat;
-    position: absolute;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
 }
 
@@ -18,14 +16,12 @@ body {
 /* ----
 Header 
 ------*/
-.header {
-    width: 1321px;
-    height: 530px;
+header {
     background: #161616;
     border-radius: 30px;
     display: flex;
-    padding: 33px 104px;
-    margin: 50px 0px 70px 175px;
+    justify-content: space-around;
+    margin: 70px 100px;
 }
 
 h1 {
@@ -34,11 +30,20 @@ h1 {
     font-size: 70px;
 }
 
+.banner-container {
+    display: flex;
+    padding-top: 100px;
+}
+
 .banner-container p {
     color: white;
     font-weight: 400;
     font-size: 16px;
     margin-top: -60px;
+}
+
+.banner-img {
+    padding: 0 10px;
 }
 
 .watch-live {
