various final update

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -299,7 +299,7 @@ hr {
 /*------------------------
 -------- animation------ */
 
-/* .watch-live {
+.watch-live {
     animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both infinite;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
@@ -324,7 +324,7 @@ hr {
     60% {
       transform: translate3d(4px, 0, 0);
     }
-  } */
+  }
 
 /*-------------------------------
 ----- media queries start------ */
