animation changed to hover only

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -299,8 +299,8 @@ hr {
 /*------------------------
 -------- animation------ */
 
-.watch-live {
-    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both infinite;
+.watch-live:hover {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
     perspective: 1000px;
